# meshinsight

./: .gitignore  INSTALL.md  LICENSE  PREDICTION.md  README.md  install.sh  k8s.md  requirements.txt
meshinsight/predictor/: online_predictor.py
meshinsight/predictor/CRISP/: README.md  graph.py  process.py
meshinsight/predictor/CRISP/example/: criticalPaths.html  flame-graph-P95.cct  flame-graph-P99.cct  trace.json
meshinsight/predictor/CRISP/example1/: criticalPaths.html  criticalpath.txt  flame-graph-P95.cct  flame-graph-P95vsP99.cct  flame-graph-P99.cct  trace.json
meshinsight/predictor/CRISP/example2/: flame-graph-P95vsP99.cct
meshinsight/predictor/config/: base.yaml  base.yml  example2.yml  parser.py  speedup.yml
meshinsight/profiler/: offline_profiler.py  test.py
meshinsight/profiler/benchmark/echo_server/: README.md  echo-server-grpc-cpu.yaml  echo-server-grpc-latency.yaml  echo-server-http-cpu.yaml  echo-server-http-latency.yaml  echo-server-tcp-cpu.yaml  echo-server-tcp-latency.yaml
meshinsight/profiler/benchmark/echo_server_grpc/wasm/: Cargo.toml  build.rs  rust-toolchain.toml
meshinsight/profiler/benchmark/echo_server_grpc/wasm/src/: example.lib.rs  lib.rs
meshinsight/profiler/config/: base.yml  config.py  istio.yml  parser.py
meshinsight/profiler/cpu/: profile.py
meshinsight/profiler/latency/: funclatency_filter.py  netfunclatency.py  syscall.c
samples/call_graph/: CALL_GRAPH.md  bookinfo.txt
utils/: address_converter.c  k8s_setup.sh  k8s_setup_worker.sh  linux_setup.sh  perf_setup.sh
(+162 files in other folders)
