[package]
name = "content-based-acl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.11.1"

[dependencies]
log = "0.4"
prost = "0.11.0"
proxy-wasm = "0.2.0"
